--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "diogoalmiro",
   "license": "MIT",
   "dependencies": {
-    "@webfocus/component": "git+ssh://git@git.rnl.tecnico.ulisboa.pt:webfocus/component.git",
     "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "debug": "^2.6.9"
   },
   "repository": {
     "type": "git",
