--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Main webfocus generic application. Allows the creation of specific applications given some requirements.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "diogoalmiro",
@@ -19,6 +19,8 @@
     "url": "git@git.rnl.tecnico.ulisboa.pt:webfocus/app.git"
   },
   "devDependencies": {
-    "jsdoc": "^3.6.6"
+    "jsdoc": "^3.6.6",
+    "mocha": "^8.3.2",
+    "supertest": "^6.1.3"
   }
 }
