--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Main webfocus generic application. Allows the creation of specific applications given some requirements.",
   "main": "app.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test:watch": "mocha --watch"
   },
   "keywords": [],
   "author": "diogoalmiro",
