--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "appdata-path": "^1.0.0",
     "debug": "^2.6.9",
     "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "systray": "^1.0.5"
   },
   "repository": {
     "type": "git",
