--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@webfocus/app",
-  "version": "0.0.1",
-  "description": "Main webfocus generic application. Allows the creation of specific applications given some requirements.",
+  "name": "webfocus",
+  "version": "0.0.0",
+  "description": "(WIP) Main webfocus generic application. Allows the creation of specific applications given some requirements.",
   "main": "app.js",
   "scripts": {
     "test": "mocha",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.rnl.tecnico.ulisboa.pt:webfocus/app.git"
+    "url": "https://github.com/diogoalmiro/webfocus"
   },
   "devDependencies": {
     "jsdoc": "^3.6.6",
