--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ctray": "^0.0.5",
     "debug": "^2.6.9",
     "express": "^4.17.1",
+    "open": "^8.0.5",
     "pug": "^3.0.2"
   },
   "repository": "diogoalmiro/webfocus",
