--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webfocus/app",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "(WIP) Main webfocus generic application. Allows the creation of specific applications given some requirements.",
   "main": "app.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "appdata-path": "^1.0.0",
+    "ctray": "^0.0.9",
     "debug": "^2.6.9",
     "express": "^4.17.1",
     "open": "^8.0.5",
