--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@webfocus/app",
-  "version": "0.0.5",
-  "description": "(WIP) Main webfocus generic application. Allows the creation of specific applications given some requirements.",
+  "version": "0.0.6",
+  "description": "[Work in Progress] This module defines two simple classes to help in the creation of NodeJS servers using express and Pug.",
   "main": "app.js",
   "scripts": {
     "test": "mocha",
