--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "@webfocus/app",
-  "version": "0.1.2",
-  "description": "[Work in Progress] This module defines two simple classes to help in the creation of NodeJS servers using express and Pug.",
+  "version": "0.2.0",
+  "description": "This module defines the WebfocusApp class to help in the creation of NodeJS servers using express and Pug.",
   "main": "app.js",
   "scripts": {
     "test": "mocha",
     "test:watch": "mocha --watch"
   },
-  "keywords": [],
+  "keywords": [
+    "webfocus",
+    "framework",
+    "server",
+    "pug"
+  ],
   "author": "diogoalmiro",
   "license": "MIT",
   "dependencies": {
@@ -22,10 +27,7 @@
     "supertest": "^6.1.3"
   },
   "bugs": {
-    "url": "https://github.com/diogoalmiro/webfocus/issues"
+    "url": "https://github.com/webfocus-js/app/issues"
   },
-  "homepage": "https://github.com/diogoalmiro/webfocus#readme",
-  "directories": {
-    "test": "test"
-  }
+  "homepage": "https://github.com/webfocus-js/app#readme"
 }
